# lockbox

./: .gitignore  .goreleaser.yml  Makefile  README.md  configure  go.mod  go.sum  justfile  lb.bash  meson.build  version.sh
.github/workflows/: build.yml  linux.yml  main.yml  release.yml  ubuntu.yml
cmd/: main.go  main_test.go  vers.txt
cmd/bash/: completions.bash
cmd/lb/: main.go
cmd/lb-bash/: completions.bash  main.go
cmd/lb-diff/: main.go
cmd/lb-gitdiff/: main.go
cmd/lb-pwgen/: main.go
cmd/lb-rekey/: main.go
cmd/lb-rw/: main.go
cmd/lb-stats/: main.go
cmd/lb-textconv/: main.go
cmd/lb-totp/: main.go
cmd/pwgen/: main.go
cmd/rw/: main.go
cmd/stats/: main.go
cmd/totp/: main.go
contrib/: completions.bash  doc.sections  rekey.sh  version
internal/: args.go  args_test.go  clip.go  clip_test.go  colors.go  encdec.go  encrypt.go  error.go  hooks.go  socket.go  utils.go
internal/app/: colors.go  colors_test.go  completions.go  completions_test.go  conv.go  conv_test.go  core.go  core_test.go  hash.go  hash_test.go  info.go  info_test.go  insert.go  insert_test.go  json.go  json_test.go  list.go  list_test.go  listfind.go  listfind_test.go  move.go  move_test.go  pwgen.go  pwgen_test.go  rekey.go  rekey_test.go  remove.go  remove_test.go  showclip.go  showclip_test.go  stats.go  stats_test.go  totp.go  totp_test.go  vers.txt
internal/backend/: actions.go  actions_test.go  core.go  core_test.go  hooks.go  hooks_test.go  query.go  query_test.go  transact.go  types.go
internal/cli/: args.go  args_test.go  completions.bash  completions.zsh  core.go  core_test.go  doc.txt
internal/clip/: clipboard.go  clipboard_test.go
internal/clipboard/: clip.go  clip_test.go
internal/colors/: colors.go  core.go  terminal.go  terminal_test.go
internal/commands/: core.go  hash.go  hash_test.go  info.go  info_test.go  insert.go  listfind.go  listfind_test.go  move.go  move_test.go  remove.go  remove_test.go  showclip.go  showclip_test.go  stats.go  stats_test.go
libs/: completions.bash
scripts/: check.go  doc.sections  version
tests/: Makefile  harness.sh  main.go  run.go  run.sh
(+144 files in other folders)
